tdf#114676 release the SolarMutex, if we own it

This is a follow up on the SolarMutex unification. Quite probably
the updater process, which is now aborting when releasing the
not-owned mutex, should somewhere acquire it.

In the end this functions currently can be called with or without
the SolarMutex being owned by the calling thread.

This conditional release is really a horrible hack / workaround;
but my guess is - like all hacks - it'll stay for longer.

Change-Id: I90e30149c2fef8bdf3dc0396bf8eb7491eedeabd
Reviewed-on: https://gerrit.libreoffice.org/49717
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Jan-Marek Glogowski <glogow@fbihome.de>
(cherry picked from commit 0e04523b040785e2ce552143d20adcbb40b61d42)